# cervantes_works_as_iiif

./: pyproject.toml
cervantes/: scrape.py
